--- a/react-vite/reactnew/my-app/public/style.css
+++ b/react-vite/reactnew/my-app/public/style.css
@@ -20,9 +20,9 @@
 }
 
 .cardTitle{
-    background-color: rgb(95, 95, 95);
+    /* background-color: rgb(95, 95, 95); */
     text-align: center;
-    color: #ffffff;
+    /* color: #ffffff; */
     margin-bottom: 5px;
 }
 
