dynamic style wuth useEffect

--- a/dynamic-style/src/App.css
+++ b/dynamic-style/src/App.css
@@ -27,6 +27,12 @@
 .App-link {
   color: #61dafb;
 }
+.valid{
+  background-color: green;
+}
+.invalid{
+  background-color: red;
+}
 
 @keyframes App-logo-spin {
   from {
