User Management App create user delete button

--- a/user-management-app/src/index.css
+++ b/user-management-app/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.users{
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0,1fr));
+  gap: 1rem;
+}
+.user{
+  background-color: antiquewhite;
+  padding: 0.5rem;
+}
+
