--- a/react-router/src/App.css
+++ b/react-router/src/App.css
@@ -36,3 +36,20 @@
     transform: rotate(360deg);
   }
 }
+
+nav{
+  height: 10vh;
+  background-color: #282c34;
+  display:flex ;
+  justify-content: center;
+  align-items: center;
+}
+.nav-link{
+  color: white;
+  margin: 1rem;
+  text-decoration: none;
+}
+.nav-link:hover{color: orange;}
+nav .active{
+  color: red;
+}
