--- a/react-router/src/App.css
+++ b/react-router/src/App.css
@@ -53,3 +53,22 @@ nav{
 nav .active{
   color: red;
 }
+section{
+  display: grid;
+  grid-gap: 1rem;
+}
+article{
+  background-color: aliceblue;
+}
+
+@media screen  and (min-width:600px){
+  section{
+    grid-template-columns: auto auto;
+  }
+}
+@media screen  and (min-width:992px){
+  section{
+    grid-template-columns: auto auto auto;
+  }
+
+}
